--- a/conf/model/old/convnext-post.yaml
+++ b/conf/model/old/convnext-post.yaml
@@ -83,8 +83,8 @@ train_sys:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
-  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
-  - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
+#  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
+#  - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
   title: Postprocessing pipeline
