--- a/conf/ensemble/final.yaml
+++ b/conf/ensemble/final.yaml
@@ -12,5 +12,6 @@ _target_: src.modules.ensemble.timed_voting_ensemble.TimedVotingEnsemble
 _convert_: partial
 
 post_process:
+  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
   - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
-#  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
+
