--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -21,7 +21,7 @@ metadata_path: data/raw/2024/train_metadata.csv
 test_size: 0
 
 # Species cap
-#max_recordings_per_species: 500
+max_recordings_per_species: 500
 
 scorer:
   _target_: src.scoring.rocauc_years.ROCAUC # Add scorer
