--- a/conf/cv.yaml
+++ b/conf/cv.yaml
@@ -1,8 +1,8 @@
 defaults:
   - base_cv
   - hydra/logging
-  - model: sweep-visformer  # Add models or ensembles
-  - wandb: train
+  - model: playful-monkey-752  # Add models or ensembles
+  - wandb: submit
 
 ###############
 #             #
@@ -13,17 +13,16 @@ processed_path: data/processed/
 raw_path: data/raw/
 cache_path: data/cache
 years: ["2024"]
-#data_path: data/raw/train_data/dummy.npy
+
 data_path: data/raw/2024/train_audio/
 metadata_path: data/raw/2024/train_metadata.csv
+
 scorer:
   _target_: src.scoring.rocauc_years.ROCAUC # Add scorer
   name: rocauc
   grade_threshold: 0
   only_primary: true
-#scorer:
-#  _target_: src.scoring.accuracy.Accuracy # Add scorer
-#  name: acc
+
 splitter:
   _target_: src.setup.splitter.Splitter
   splitter:
