--- a/conf/best/convnext-post-0.70.yaml
+++ b/conf/best/convnext-post-0.70.yaml
@@ -58,7 +58,7 @@ train_sys:
       persistent_workers: false
     n_folds: 5
     epochs: 50
-    patience: 166
+    patience: 15
     batch_size: 64
     model:
       _target_: src.modules.training.models.timm.Timm
@@ -83,9 +83,8 @@ train_sys:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
-  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
-  - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
-  - _target_: src.modules.training.postprocessing.window_5s_to_10s.Window5sTo10s
+  - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
+    smooth_factor: 0.75
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
   title: Postprocessing pipeline
