--- a/conf/cv.yaml
+++ b/conf/cv.yaml
@@ -1,8 +1,8 @@
 defaults:
   - base_cv
   - hydra/logging
-  - model: playful-monkey-752  # Add models or ensembles
-  - wandb: submit
+  - model: ablation/hugo # Add models or ensembles
+  - wandb: train
 
 ###############
 #             #
@@ -35,4 +35,6 @@ splitter:
   random_state: 42
   years: ["2024"]
 allow_multiple_instances: true
-#corr_weight: 0.5
+
+corr_weight: 0.5
+seed: 42
